--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Search Animation</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"/>
+  <title>Scanner Animation</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="search-box">
-      <span class="prefix">YouTube.com/</span>
-      <span id="typewriter-text"></span>
-      <span class="cursor">|</span>
-    </div>
-  </div>
+  <canvas id="flowerCanvas"></canvas>
+  <div class="text-overlay" id="text">Searching...</div>
+
   <script src="script.js"></script>
 </body>
 </html>
